[gd_scene load_steps=4 format=3 uid="uid://dx77tnbbuuksa"]

[ext_resource type="AudioStream" uid="uid://dc3vdbafxru8k" path="res://assets/AUDIO/SFX/Landing.wav" id="1_dgwg1"]
[ext_resource type="Script" path="res://script/audioplayer.gd" id="1_k1hbk"]
[ext_resource type="AudioStream" uid="uid://dboxuthe78mov" path="res://assets/AUDIO/SFX/EnemieHit.wav" id="3_qmkn0"]

[node name="AUDIO" type="Node"]
script = ExtResource("1_k1hbk")

[node name="BGM" type="AudioStreamPlayer" parent="."]

[node name="SFX1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_dgwg1")
max_polyphony = 2

[node name="SFX2" type="AudioStreamPlayer" parent="."]
max_polyphony = 2

[node name="SFX3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qmkn0")
max_polyphony = 2
